--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -13,7 +13,7 @@
     <input type="password" name="password" id="password"/>
     <br/>
     <input type="submit" value="Login"/>
-    <div th:if="${param.error]" style="color: red">
+    <div th:if="${param.error}" style="color: red">
         Неправильные имя или пароль
     </div>
 </form>
