--- a/src/main/resources/templates/users/editOrNew.html
+++ b/src/main/resources/templates/users/editOrNew.html
@@ -14,13 +14,13 @@
 
     <caption><h1>Fill in the fields</h1></caption><br/>
     <label for="firstName">Name: </label>
-    <input type="text" th:field="*{firstName}" id="firstName"/><br/><br/>
+    <input type="text" th:field="*{username}" id="firstName"/><br/><br/>
     <label for="lastName">Surname: </label>
-    <input type="text" th:field="*{lastName}" id="lastName"/><br/><br/>
+    <input type="text" th:field="*{password}" id="lastName"/><br/><br/>
     <label for="age">Age: </label>
     <input type="text" th:field="*{age}" id="age"/><br/><br/>
-    <label for="email">email: </label>
-    <input type="text" th:field="*{email}" id="email"/>
+<!--    <label for="email">email: </label>-->
+<!--    <input type="text" th:field="*{email}" id="email"/>-->
     <br/>
     <br/>
     <input type="submit" value="save"/>
