3_1_3 security commit fisunov + habr

--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h2>Hello :)</h2>
+<h2>Admin page</h2>
 <br>
 <table border="1">
     <th>
@@ -19,7 +19,7 @@
 <br/>
 <table border="1">
 <!--    <th>-->
-<!--        <button onclick="window.location.href = '/truncate';"><h4>Truncate table of users</h4></button>-->
+<!--        <button onclick="window.location.href = '/truncate';"><h4>Truncate table of user</h4></button>-->
 <!--    </th>-->
     <th>
         <button onclick="window.location.href = '/fill';"><h4>Fill table of users</h4></button>
