--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,16 +1,37 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en" xmlns: th="http: //www.thymeleaf.org">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Hello</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--Salute!-->
+
+<!--<br/>-->
+<!--<form th:method="POST" th:action="@{/logout}">-->
+<!--<input type="submit" value="logout"/>-->
+
+<!--</form>-->
+<!--</body>-->
+<!--</html>-->
+
+
 <!DOCTYPE html>
-<html lang="en" xmlns: th="http: //www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <meta charset="UTF-8">
     <title>Hello</title>
 </head>
 <body>
-Salute!
+<div>
+    <th:block th:each="msg : ${messages}">
+        <h2 th:text="${msg}"></h2>
+    </th:block>
+    <br>
 
-<br/>
-<form th:method="POST" th:action="@{/logout}">
-<input type="submit" value="logout"/>
+    <button onclick="window.location.href = '/auth/login'"><h2>login</h2></button>
+    <button onclick="window.location.href = '/auth/register'"><h2>register</h2></button>
 
-</form>
+</div>
 </body>
 </html>
