--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -26,7 +26,7 @@
             <td th:text="${user.age}"></td>
             <td th:text="${user.email}"></td>
             <td>
-                <form th:method="POST" th:action="@{/users/edit?id={id}(id=${user.getId()})}">
+                <form th:method="POST" th:action="@{/templates/user/edit?id={id}(id=${user.getId()})}">
                     <input type="submit" value="update"/>
                 </form>
 
