--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -12,7 +12,7 @@
         <button onclick="window.location.href = '/users';"><h4>Show list of all users</h4></button>
     </th>
     <th>
-        <button onclick="window.location.href = '/users/new';"><h4>Add new user</h4></button>
+        <button onclick="window.location.href = 'user/new';"><h4>Add new user</h4></button>
     </th>
 
 </table>
@@ -47,9 +47,9 @@
 
 <!--<table border="1">-->
 <!--    <th>-->
-<!--        <button onclick="window.location.href = '/create';">Create table of users</button>-->
+<!--        <button onclick="window.location.href = '/create';">Create table of user</button>-->
 <!--    </th>-->
 <!--    <th>-->
-<!--        <button onclick="window.location.href = '/drop';">Drop table of users</button>-->
+<!--        <button onclick="window.location.href = '/drop';">Drop table of user</button>-->
 <!--    </th>-->
 <!--</table>-->
