--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -9,10 +9,10 @@
 <br>
 <table border="1">
     <th>
-        <button onclick="window.location.href = '/users';"><h4>Show list of all users</h4></button>
+        <button onclick="window.location.href = '/admin/users';"><h4>Show list of all users</h4></button>
     </th>
     <th>
-        <button onclick="window.location.href = '/users/new';"><h4>Add new user</h4></button>
+        <button onclick="window.location.href = '/users/editOrNew';"><h4>Add new user</h4></button>
     </th>
 
 </table>
