че то сделал, лучше стало, но не очень

--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -15,9 +15,9 @@
     <caption><h1>Fill in the fields</h1></caption><br/>
     <label for="username">Username: </label>
     <input type="text" th:field="*{username}" id="username"/><br/><br/>
-    <label for="age">Surname: </label>
+    <label for="age">Age: </label>
     <input type="text" th:field="*{age}" id="age"/><br/><br/>
-    <label for="password">Age: </label>
+    <label for="password">password: </label>
     <input type="text" th:field="*{password}" id="password"/><br/><br/>
 
     <th:block th:each="role: ${listRoles}">
