--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,23 +1,5 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en" xmlns: th="http: //www.thymeleaf.org">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>Hello</title>-->
-<!--</head>-->
-<!--<body>-->
-<!--Salute!-->
-
-<!--<br/>-->
-<!--<form th:method="POST" th:action="@{/logout}">-->
-<!--<input type="submit" value="logout"/>-->
-
-<!--</form>-->
-<!--</body>-->
-<!--</html>-->
-
-
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Hello</title>
