--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -11,11 +11,11 @@
 
     <label for="username">Введите имя пользователя: </label>
     <input type="text" name="username" id="username"/>
-    <br/>
+    <br/><br/>
     <label for="password">Введите пароль: </label>
     <input type="password" name="password" id="password"/>
-    <br/>
-    <input type="submit" value="Login"/>
+    <br/><br/>
+    <input type="submit" value="Войти"/>
     <div th:if="${param.error}" style="color: darkred">
         Неправильные имя или пароль
     </div>
