Победил апдейт юзеров. Еще что-то победил, но уже не помню.

--- a/src/main/resources/templates/admin/truncateOrFillTable.html
+++ b/src/main/resources/templates/admin/truncateOrFillTable.html
@@ -7,7 +7,7 @@
 <body>
 The action is completed<br/>
 <br/>
-<button onclick="window.location.href = '/';">to main page</button><br/>
+<button onclick="window.location.href = '/admin';">to admin page</button><br/>
 </body>
 </body>
 </html>
