--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -11,8 +11,9 @@
     </th:block>
     <br>
 
-    <button onclick="window.location.href = '/auth/login'"><h2>login</h2></button>
-    <button onclick="window.location.href = '/auth/register'"><h2>register</h2></button>
+    <button onclick="window.location.href = '/login'"><h2>войти</h2></button>
+<!--    <button onclick="window.location.href = '/auth/login'"><h2>войти</h2></button>-->
+    <button onclick="window.location.href = '/auth/register'"><h2>регистрация</h2></button>
 
 </div>
 </body>
