--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -5,24 +5,33 @@
     <title>Title</title>
 </head>
 <body>
-<h2>Admin page</h2>
+<form th:method="POST" th:action="@{/logout}">
+    <input type="submit" value="выход из системы"/>
+</form><br/>
+<h2>Страница администратора</h2>
 <br>
 <table border="1">
     <th>
-        <button onclick="window.location.href = '/admin/users';"><h4>Show list of all users</h4></button>
+        <button onclick="window.location.href = '/admin/users';"><h4>Показать список пользователей</h4></button>
     </th>
     <th>
-        <button onclick="window.location.href = '/users/editOrNew';"><h4>Add new user</h4></button>
+        <button onclick="window.location.href = '/users/editOrNew';"><h4>Добавить пользователя</h4></button>
     </th>
 
 </table>
 <br/>
 <table border="1">
-<!--    <th>-->
-<!--        <button onclick="window.location.href = '/truncate';"><h4>Truncate table of user</h4></button>-->
-<!--    </th>-->
     <th>
-        <button onclick="window.location.href = '/fill';"><h4>Fill table of users</h4></button>
+        <button onclick="window.location.href = '/truncate';"><h4>Очистить таблицу<br/> пользователей</h4></button>
+    </th>
+    <th>
+        <button onclick="window.location.href = '/admin/fill_users';"><h4>Заполнить таблицы стандартными<br/>
+            пользователями: 'admin' и 'user'
+        </h4></button>
+    </th>
+    <th>
+        <button onclick="window.location.href = '/admin/fill_roles';"><h4>Заполнить таблицу ролей:<br/>
+            'ROLE_ADMIN', 'ROLE_USER'</h4></button>
     </th>
 </table>
 </body>
