--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -5,19 +5,22 @@
     <title>Users</title>
 </head>
 <body>
-<button onclick="window.location.href = '/';">Go to start page</button><br/>
+<form th:method="POST" th:action="@{/logout}">
+    <input type="submit" value="выход из системы"/>
+</form><br/>
+<button onclick="window.location.href = '/';">На стартовую страницу</button><br/>
 
 <div><br/>
-    <button onclick="window.location.href = '/users/new';">Add new user</button>
+    <button onclick="window.location.href = '/users/new';">Добавить нового<br/> пользователя</button>
     <table border="1">
-        <caption><h2>List of Users</h2></caption>
+        <caption><h2>Список пользователей</h2></caption>
         <thead>
         <tr>
             <th> id </th>
-            <th> username </th>
-            <th> age </th>
-            <th> roles </th>
-            <th> action </th>
+            <th> логин </th>
+            <th> возраст </th>
+            <th> список ролей </th>
+            <th> действие </th>
         </tr>
         </thead>
         <tbody>
@@ -28,12 +31,12 @@
             <td th:text="${user.age}"></td>
             <td th:text="${user.roles}"></td>
             <td>
-                <form th:method="POST" th:action="@{/user/edit?id={id}(id=${user.getId()})}">
-                    <input type="submit" value="update"/>
+                <form th:method="POST" th:action="@{/edit?id={id}(id=${user.getId()})}">
+                    <input type="submit" value="редактировать"/>
                 </form>
 
                 <form th:method="POST" th:action="@{/delete?id={id}(id=${user.getId()})}">
-                    <input type="submit" value=" delete"/>
+                    <input type="submit" value=" удалить"/>
                 </form>
             </td>
         </tr>
