--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <title>Register</title>
 </head>
+<h2>Регистрация нового пользователя</h2>
 <body>
-    <form th:method="POST" th:action="@{/auth/register}" th:object="${user}">
+    <form th:method="POST" th:action="@{/auth/register_new_user}" th:object="${user}">
         <label for="username">Введите имя пользователя: </label>
         <input type="text" th:field="*{username}" id="username"/>
         <div style="color:darkred" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Ошибка в логине</div>
+        <br/>
         <br/>
         <label for="age">Введите ваш возраст: </label>
         <input type="text" th:field="*{age}" id="age"/>
         <div style="color:darkred" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Ошибка введения возраста</div>
         <br/>
+        <br/>
         <label for="password">Введите ваш пароль: </label>
         <input type="text" th:field="*{password}" id="password"/>
         <div style="color:darkred" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Ошибка в пароле</div>
+        <br/>
         <br/>
         <label>Роль:
             <th:block th:each="role: ${listRoles}">
