Победил апдейт юзеров. Еще что-то победил, но уже не помню.

--- a/src/main/resources/templates/admin/admin_panel.html
+++ b/src/main/resources/templates/admin/admin_panel.html
@@ -12,10 +12,13 @@
 <br>
 <table border="1">
     <th>
-        <button onclick="window.location.href = '/admin/users';"><h4>Показать список пользователей</h4></button>
+        <button onclick="window.location.href = '/user';"><h4>Показать информацию о<br/> текущем пользователе</h4></button>
     </th>
     <th>
-        <button onclick="window.location.href = '/users/editOrNew';"><h4>Добавить пользователя</h4></button>
+        <button onclick="window.location.href = '/admin/users';"><h4>Показать список<br/>всех пользователей</h4></button>
+    </th>
+    <th>
+        <button onclick="window.location.href = '/users/editOrNew';"><h4>Добавить<br/> пользователя</h4></button>
     </th>
 
 </table>
