3_1_3 security commit fisunov + habr

--- a/src/main/resources/templates/admin/admin_panel.html
+++ b/src/main/resources/templates/admin/admin_panel.html
@@ -18,7 +18,7 @@
         <button onclick="window.location.href = '/admin/users';"><h4>Показать список<br/>всех пользователей</h4></button>
     </th>
     <th>
-        <button onclick="window.location.href = '/users/editOrNew';"><h4>Добавить<br/> пользователя</h4></button>
+        <button onclick="window.location.href = '/admin/new';"><h4>Добавить нового<br/> пользователя</h4></button>
     </th>
 
 </table>
