--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -34,6 +34,6 @@
     </tbody>
 </table>
 <br/>
-<button onclick="window.location.href = '/to_main'"><h2>На главную</h2></button>
+<button onclick="window.location.href = '/to_main'">На главную</button>
 </body>
 </html>
