3_1_3 security почти доделал

--- a/src/main/resources/templates/admin/admin_panel.html
+++ b/src/main/resources/templates/admin/admin_panel.html
@@ -25,16 +25,12 @@
 <br/>
 <table border="1">
     <th>
-        <button onclick="window.location.href = '/truncate';"><h4>Очистить таблицу<br/> пользователей</h4></button>
+        <button onclick="window.location.href = '/admin/truncate';"><h4>Очистить таблицу<br/> пользователей</h4></button>
     </th>
     <th>
-        <button onclick="window.location.href = '/admin/fill_users';"><h4>Заполнить таблицы стандартными<br/>
+        <button onclick="window.location.href = '/admin/fillUsers';"><h4>Заполнить таблицы стандартными<br/>
             пользователями: 'admin' и 'user'
         </h4></button>
-    </th>
-    <th>
-        <button onclick="window.location.href = '/admin/fill_roles';"><h4>Заполнить таблицу ролей:<br/>
-            'ROLE_ADMIN', 'ROLE_USER'</h4></button>
     </th>
 </table>
 </body>
