--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -9,17 +9,14 @@
     <form th:method="POST" th:action="@{/auth/register_new_user}" th:object="${user}">
         <label for="username">Введите имя пользователя: </label>
         <input type="text" th:field="*{username}" id="username"/>
-        <div style="color:darkred" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Ошибка в логине</div>
         <br/>
         <br/>
         <label for="age">Введите ваш возраст: </label>
         <input type="text" th:field="*{age}" id="age"/>
-        <div style="color:darkred" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Ошибка введения возраста</div>
         <br/>
         <br/>
         <label for="password">Введите ваш пароль: </label>
         <input type="text" th:field="*{password}" id="password"/>
-        <div style="color:darkred" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Ошибка в пароле</div>
         <br/>
         <br/>
         <label>Роль:
@@ -30,8 +27,8 @@
         </label>
         <br/><br/>
         <input type="submit" value="Зарегистрировать нового пользователя"/>
-    </form>
-
+    </form> <br/>
+    <input type="button" value="Отмена" onclick="history.go(-1)"/>
 
 </body>
 </html>
