--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -5,7 +5,8 @@
     <title>Login page</title>
 </head>
 <body>
-<form name="f" method="post" action="/process_login">
+<h2>Вход в систему</h2>
+<form name="f" method="post" action="/login">
 
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 
