--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h2>Вход в систему</h2>
-<form name="f" method="post" action="/login">
+<form name="f" method="post" action="/process_login">
 
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 
