--- a/src/main/resources/templates/admin/admin_panel.html
+++ b/src/main/resources/templates/admin/admin_panel.html
@@ -28,7 +28,7 @@
         <button onclick="window.location.href = '/admin/truncate';"><h4>Очистить таблицу<br/> пользователей</h4></button>
     </th>
     <th>
-        <button onclick="window.location.href = '/admin/fillUsers';"><h4>Заполнить таблицы стандартными<br/>
+        <button onclick="window.location.href = '/fillUsers';"><h4>Заполнить таблицы стандартными<br/>
             пользователями: 'admin' и 'user'
         </h4></button>
     </th>
