--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -12,9 +12,17 @@
     <br>
 
     <button onclick="window.location.href = '/login'"><h2>войти</h2></button>
-<!--    <button onclick="window.location.href = '/auth/login'"><h2>войти</h2></button>-->
     <button onclick="window.location.href = '/auth/register'"><h2>регистрация</h2></button>
+<br/>
+<br/>
+<br/>
+    <button onclick="window.location.href = '/fillUsers';"><h5>Заполнить таблицы стандартными<br/>
+        пользователями: 'admin' и 'user'
+    </h5></button>
 
+    <button onclick="window.location.href = '/fillRoles';"><h5>Заполнить таблицы стандартными<br/>
+        ролями: 'ROLE_ADMIN' и 'ROLE_USER'
+    </h5></button>
 </div>
 </body>
 </html>
